# toxpol-nlp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
data_gen/: README.md  datagen_demo.ipynb
tests/: test_datagen.py
toxpol/: __init__.py  datagen.py
